--- a/Assignments/assignment2-MagnusDH/README
+++ b/Assignments/assignment2-MagnusDH/README
@@ -43,11 +43,6 @@ Starter code for assignment 2
 
 
 
-
-
-
-!!!!! Remove "filter_to_apply" in tileInfo?
-
 /*
 MPI tags:
 0 = something wrong
@@ -65,16 +60,41 @@ MPI tags:
 
 
 
+sobel[(row_counter-1*width) + column_counter-1].blue;
+
+padded_pixels = (w*1) + ((h-1)*2) = 6*1 + (3-1)*2 = 6 + 4 = 10 
+
+00, 00, 00, 00, 00, 00
+00, 00, 01, 02, 03, 00
+00, 04, 05, 06, 07, 00
+00, 08, 09, 10, 11, 00
+00, 12, 13, 14, 15, 00
+00, 00, 00, 00, 00, 00
+
+row_counter = 1
+column = 1
 
 
-
-01, 02, 03, 04
-05, 06, 07, 08
-09, "10", 11, 12
-13, 14, 15, 16
+pixels[i].red = sobel[(row_counter-1*image_width) + column_counter-1].red;
 
 
 row = 2
 column = 1
 width = 4
 int top_left_index = (((row - 1) * tile.width) + column) - 1;  
+
+
+
+
+
+
+
+workflow:
+
+    master divides image into tiles:
+
+
+
+
+
+
