--- a/Assignments/assignment2-MagnusDH/README
+++ b/Assignments/assignment2-MagnusDH/README
@@ -1,68 +1,14 @@
-Starter code for assignment 2
+# How to run code
 
-
-# To Do
+    * Run sequential version
+        - Navigate to the "code/serial" folder
+        - run "make" to compile the program
+        - run "./main" to run program
     
-    - Create a hostfile (with available nodes) everytime the program is run
+    * Run parellel version with MPI
+        - Navigate to the "code/parallel" folder
+        - run "make run_parallel" to compile and run the program
 
-    Start with the sequential version.
-    -Load a BMP image using the provided library.
-    -Convert it to grayscale.
-    -Write a simple function to apply the Emboss filter and Sobel filter one pixel at a time (loop through image pixels).
-    -Test it on a small BMP image to check it works.
-    -Save the result as new BMP files.
-
-    Write a parallel program (C/C++ with MPI + OpenMP):
-    -Modify your program so that the master process splits the image into tiles and sends them to worker processes.
-    -Inside each process, use OpenMP to parallelize the pixel operations (loops).
-    -Collect the processed tiles back and save the full image.
-    -Master collects results and saves the image.
-    -algorithm must account for potential missing pixels.
-
-    -Optimize your parallel code:
-    -Try different tile sizes (e.g., rows vs blocks).
-    -Avoid recomputing values.
-    -Reduce communication overhead.
-    -Think of something to make it faster (e.g., reduce communication between processes, balance the tile sizes better, avoid redundant calculations).
-    -Show performance improvements (measure runtime with different image sizes and numbers of processes).
-
-    Compare runtimes:
-    -Run your sequential version.
-    -Run your parallel version(s).
-    -Run parallel version + openMP version
-    -Compare the results
-    
-
-
-# Report
- - Once this version is implemented, you should propose (at least one) optimization to your code. 
-    Each optimization should be backed up by evaluations, against the initial parallel version
-
-- Assignment text didn't say anything about running the code on more or less nodes thatn 6. So the version only works for 1,2,3,4.... nodes beacuse of uneven dividing of the image
-
-
-
-
-/*
-MPI tags:
-0 = something wrong
-1 = master process sends info about a tile
-2 = master process sends array of pixels
-3 = worker sends array of sobel filtered pixels back to master
-4 = worker sends array of emboss filtered pixels back to master
-*/
-
-
-
-
-
-sobel[(row_counter-1*width) + column_counter-1].blue;
-
-padded_pixels = (w*1) + ((h-1)*2) = 6*1 + (3-1)*2 = 6 + 4 = 10 
-
-00, 00, 00, 00, 00, 00
-00, 00, 01, 02, 03, 00
-00, 04, 05, 06, 07, 00
-00, 08, 09, 10, 11, 00
-00, 12, 13, 14, 15, 00
-00, 00, 00, 00, 00, 00
+    * Run parellel version with MPI+openMP
+        - Navigate to the "code/parallel" folder
+        - run "make run_openMP" to compile and run the program
